# libatapp

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  cmake_dev.sh  libatapp-config.cmake.in
.agents/skills/: README.md
.agents/skills/ai-agent-maintenance/: SKILL.md
.agents/skills/configure-expression/: SKILL.md
.agents/skills/libatapp-etcd-discovery/: SKILL.md
.agents/skills/libatapp-module-connector/: SKILL.md
.agents/skills/testing/: SKILL.md
.github/: .cache-key  copilot-instructions.md
.github/skills/: README.md  build.md  configure-expression.md  testing.md
.github/workflows/: codeql.yml  main.yml
atframework/: Repository.cmake
binding/c/: CMakeLists.txt
binding/c/atframe/: libatapp_c.cpp  libatapp_c.h
ci/: cleanup_prebuilt.sh  do_ci.ps1  do_ci.sh  format.sh
ci/etcd/: setup-etcd.ps1  setup-etcd.sh
include/: include.macro.cmake
include/atframe/: atapp.h  atapp_common_types.h  atapp_conf.h  atapp_conf.proto  atapp_conf_rapidjson.h  atapp_config.h.in  atapp_log_sink_maker.h  atapp_module_impl.h  atapp_windows_minidump.h
include/atframe/connectors/: atapp_connector_atbus.h  atapp_connector_impl.h  atapp_connector_loopback.h  atapp_endpoint.h
include/atframe/etcdcli/: etcd_cluster.h  etcd_def.h  etcd_discovery.h  etcd_keepalive.h  etcd_packer.h  etcd_watcher.h
include/atframe/modules/: etcd_module.h  service_discovery_module.h  worker_context.h  worker_pool_module.h
project/cmake/: FetchDependeny.cmake  ProjectBuildOption.cmake
sample/: CMakeLists.txt  sample_echo_svr.cpp
sample/sample_etc/: sample_echo_svr.conf  sample_echo_svr.start.sh  sample_echo_svr.yaml
src/: CMakeLists.txt
src/atframe/: atapp.cpp  atapp_conf.cpp  atapp_conf_rapidjson.cpp  atapp_log_sink_maker.cpp  atapp_module_impl.cpp  atapp_windows_minidump.cpp
src/atframe/connectors/: atapp_connector_atbus.cpp  atapp_connector_impl.cpp  atapp_connector_loopback.cpp  atapp_endpoint.cpp
src/atframe/etcdcli/: etcd_cluster.cpp  etcd_discovery.cpp  etcd_keepalive.cpp  etcd_packer.cpp  etcd_watcher.cpp
src/atframe/modules/: etcd_module.cpp  service_discovery_module.cpp  worker_pool_module.cpp
test/: CMakeLists.txt
test/case/: atapp_configure_expression_test.conf  atapp_configure_expression_test.env.txt  atapp_configure_expression_test.yaml  atapp_configure_loader_test.conf  atapp_configure_loader_test.cpp  atapp_configure_loader_test.env.txt  atapp_configure_loader_test.yaml  atapp_configure_loader_test_app_keys.txt  atapp_configure_loader_test_etcd_keys.txt  atapp_configure_loader_test_log_keys.txt  atapp_connector_test.cpp  atapp_direct_connect_test.cpp  atapp_discovery_reconnect_test.cpp  atapp_discovery_test.cpp  atapp_downstream_send_test.cpp  atapp_error_recovery_test.cpp  atapp_etcd_cluster_test.cpp  atapp_etcd_module_test.cpp  atapp_etcd_module_unit_test.cpp  atapp_etcd_packer_test.cpp  atapp_etcd_watcher_unit_test.cpp  atapp_message_test.cpp  atapp_setup_test.cpp  atapp_test_0.yaml  atapp_test_1.yaml  atapp_test_2.yaml  atapp_test_direct_1.yaml  atapp_test_direct_2.yaml  atapp_test_direct_3.yaml  atapp_test_discovery_1.yaml  atapp_test_discovery_1b.yaml  atapp_test_discovery_2.yaml  atapp_test_discovery_3.yaml  atapp_test_discovery_4.yaml  atapp_test_downstream_1.yaml  atapp_test_downstream_2.yaml  atapp_test_etcd.yaml  atapp_test_etcd_module.yaml  atapp_test_etcd_module_ext_disc_node1a.yaml  atapp_test_etcd_module_ext_disc_node1b.yaml  (+24 more)
tools/: CMakeLists.txt  atappctl.cpp
